--- a/dashboard/App/Views/productionView.html
+++ b/dashboard/App/Views/productionView.html
@@ -7,5 +7,7 @@
 <body>
     <div>Production View</div>
     <div>Production Count: {{productionCount}}</div>
+
+    <iframe src="https://webchat.botframework.com/embed/pibot-lb?t=AQdM5PAuiIE.dAA.SABtAHMAWABlAHEAdwBnAGMASwAwAA.RpMqzbeO0QE.eDUUKFnJ_A8.a2u_-kJ7tFytRy5mvK4LlcrZ0pBH6Q1H15ZNHMf8di8" style="height: 502px; max-height: 502px;"></iframe>
 </body>
 </html>
